jenkins-app/manifests/dev/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-app
  labels:
    name: dev-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: dev-app
  minReadySeconds: 60
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        name: dev-app
    spec:
      containers:
      - name: dev-app
        image: public.nexus.cams7.ml/jenkinsapp:0.0.1
        imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: dev-app
spec:
  selector:
    name: dev-app
  ports:
    - name: port1
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dev-redirect-scheme
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dev-strip-path-prefix
spec:
  stripPrefix:
    prefixes:
      - /jenkinsapp
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dev-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dev.cams7.ml`)
      kind: Rule
      middlewares:
        - name: dev-redirect-scheme      
      services:
        - name: dev-app
          port: 5000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dev-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dev.cams7.ml`) && PathPrefix(`/jenkinsapp`)
      kind: Rule
      middlewares:
        - name: dev-strip-path-prefix
      services:
        - name: dev-app
          port: 5000
  tls:
    secretName: dev.cams7.ml
